--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json": "json-server --watch ./db/db.json --port 3004"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
+    "autoprefixer": "^10.4.12",
+    "json-server": "^0.17.0",
     "next": "12.3.1",
+    "postcss": "^8.4.17",
+    "postcss-loader": "^7.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
