--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "json": "json-server --watch ./db/db.json --port 3004"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "antd": "^4.23.4",
     "autoprefixer": "^10.4.12",
     "json-server": "^0.17.0",
     "next": "12.3.1",
